--- a/HTML+CSS+JavaScript/浮动布局作业.html
+++ b/HTML+CSS+JavaScript/浮动布局作业.html
@@ -55,7 +55,6 @@
             float: left;
             width: 450px;
             height: 400px;
-            margin-left: 10px;
         }
         .content .rightPart .L .A{
             float: left;
@@ -83,6 +82,19 @@
             width: 190px;
             height: 400px;
             background-color: darkorchid;
+        }
+        .content .rightPart .bottom{
+            float: right;
+            width: 650px;
+            height: 25px;
+            background-color: green;
+            margin-top: 10px;
+        }
+        .footer{
+            width: 970px;
+            height: 35px;
+            background-color:blue;
+            margin: 10px auto;
         }
     </style>
 </head>
