--- a/HTML+CSS+JavaScript/justify-content.html
+++ b/HTML+CSS+JavaScript/justify-content.html
@@ -7,11 +7,11 @@
         *{
             margin: 0;
             padding: 0;
-            list-style:none;}
+            list-style:none;
+        }
         body{
             background-color: #eee;
             font-family: "Microsoft Yahei";
-
         }
         section{
             width: 1000px;
@@ -26,7 +26,6 @@
             border: 1px solid #999;
             background-color: #fff;
             display: flex;
-
         }
 
         ul li{
@@ -34,7 +33,6 @@
             height: 200px;
             background: pink;
             margin:10px;
-
         }
 
         section:nth-child(1) ul{
